# dj-ai-chat

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
ai_chat/: admin.py  apps.py  conf.py  models.py  routing.py  urls.py
ai_chat/consumers/: __init__.py  base.py  chat.py  chat_room.py  config.py  message_handler.py  vector_store.py
ai_chat/locale/de/LC_MESSAGES/: django.mo  django.po
ai_chat/management/commands/: tune_retrieval.py
ai_chat/migrations/: 0001_initial.py  0002_remove_chatsession_unique_active_ai_chat_session_per_scope_and_more.py
ai_chat/services/: __init__.py  retrieval_logger.py  session_manager.py  sources.py  threshold_tuning.py
ai_chat/static/ai_chat/: chat.bundle.js
ai_chat/templates/ai_chat/: chat.html
ai_chat/tests/: factories.py  test_ws_security.py
ai_chat/tests/functional/: test_chat_view.py
ai_chat/tests/integration/: test_chat_consumer.py
ai_chat/tests/unit/: test_apps_peer_check.py  test_conf.py  test_models.py  test_permissions.py  test_retrieval_logger.py  test_session_manager.py  test_sources.py  test_tune_retrieval.py  test_vector_store_manager.py
ai_chat/views/: __init__.py  base.py  chat.py  permissions.py
frontend/: index.js
