[project]
name = "dj-ai-chat"
version = "0.1.0"
description = "RAG-backed AI chat for Django: WebSocket (Channels) chat consumer with OTP gate, session/history management, retrieval source rendering and threshold tuning (app package `ai_chat`)."
authors = [{ name = "Stefan Ostrowski", email = "ostrowski@addvendo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5,<6",
    "channels>=4,<5",
    "django-otp>=1,<2",
    "django-two-factor-auth>=1,<2",
    "pydantic>=2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_chat"]

[tool.hatch.build.targets.sdist]
include = ["ai_chat", "frontend", "package.json", "README.md", "pyproject.toml"]
